homework6/slurm-32432642.out
main.cpp: In function ‘bool checkPixels(const PNG&, const PNG&, const Pixel&, int, int, int, int, int, int)’:
main.cpp:208:5: error: invalid controlling predicate
     for (int row = 0; checkParallelLoop(row, mask, startRow, img1, false); row++) {
     ^~~
./ImageChecker: ./ImageChecker: cannot execute binary file
Command exited with non-zero status 126
	Command being timed: "./ImageChecker images/Mammogram.png images/Cancer_mask.png outputs/cancerout.png true 75 32"
	User time (seconds): 0.00
	System time (seconds): 0.00
	Percent of CPU this job got: 62%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.00
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 1572
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 468
	Voluntary context switches: 16
	Involuntary context switches: 2
	Swaps: 0
	File system inputs: 0
	File system outputs: 8
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 126
